# hello-world-mantra-cosmwasm

./: Cargo.toml  commands.txt  download.wasm  mantrachaind-cli.env
artifacts/: checksums.txt  checksums_intermediate.txt  hello_world_contract.wasm
src/: contract.rs  lib.rs  msg.rs  state.rs
