[package]
name = "hello_world_contract"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.0"
cw2 = "0.16"
cw-storage-plus = { version = "0.16", features = ["iterator"] } # Or the latest version
serde = { version = "1.0", features = ["derive"] }  # Or the latest version
cosmwasm-schema = "1.1.1"  # Or the latest compatible version
schemars = "0.8.11"        # Or the latest compatible version

